[project]
name = "zebra-finch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
package-mode = false
requires-python = ">=3.12"
dependencies = [
    "nemo-toolkit[asr] (>=2.1.0,<3.0.0)",
    "onnx (>=1.20.0,<2.0.0)",
    "onnxscript (>=0.5.6,<1.0.0)",
    "onnxruntime (>=1.23.2,<2.0.0)",
]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]
